<resources>
    <string name="app_name">William-Hayward</string>
    <string name="addRestaurant">Add New Restaurant</string>
    <string name="create">Add A Restaurant:</string>
    <string name="menuActivity">Go Back To Map</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="cuisine">Cuisine:</string>
    <string name="rating">"Star Rating: "</string>
    <string name="Add">Add Restaurant</string>
    <string name="AddToDatabse">Add Restaurants To Databse</string>
    <string name="preferences">Preferences</string>
    <string name="load">Load From Database</string>
    <string name="web">Load Restaurants From Web</string>
</resources>