<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".saveRestaurantActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16pt"
        android:id="@+id/tv1"
        android:text="@string/create"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="14pt"
        android:id="@+id/tv2"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et1"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/et1"
        app:layout_constraintLeft_toRightOf="@+id/tv2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14pt"
        android:id="@+id/tv3"
        android:text="@string/address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et2"
        app:layout_constraintTop_toBottomOf="@id/tv2"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/et2"
        app:layout_constraintLeft_toRightOf="@+id/tv3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv2"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14pt"
        android:id="@+id/tv4"
        android:text="@string/cuisine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et3"
        app:layout_constraintTop_toBottomOf="@id/tv3"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/et3"
        app:layout_constraintLeft_toRightOf="@+id/tv4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv3"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14pt"
        android:id="@+id/tv5"
        android:text="@string/rating"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et4"
        app:layout_constraintTop_toBottomOf="@id/tv4"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/et4"
        android:inputType="number"
        android:digits="12345"
        android:maxLength="1"
        android:hint="Between 1 and 5."
        app:layout_constraintLeft_toRightOf="@+id/tv5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv4"
        />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="2px"
        android:id="@+id/btn1"
        android:text="@string/Add"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et4"
        />


</androidx.constraintlayout.widget.ConstraintLayout>